name:                weather-cache-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/skaer2/weather-cache-server
license:             BSD3
license-file:        LICENSE
author:              skaer2
maintainer:          max.bog200174@gmail.com
copyright:           2021 skaer2
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable weather-cache-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , text
                     , servant
                     , servant-client
                     , servant-server
                     , aeson
                     , mtl
                     , cache
                     , clock
                     , wai
                     , warp
                     , time
